--- a/test/resource-list-select.html
+++ b/test/resource-list-select.html
@@ -99,7 +99,7 @@
                             let item = this.$refs.list.$children[i]
                             console.log(item);
                             if (!item.disabled){
-                                item.checkValue = true;
+                                item.checkedValue = true;
                             }
                         }
                     },
