Add hoverable to DataTable

--- a/test/index-datatable.html
+++ b/test/index-datatable.html
@@ -208,6 +208,9 @@
                          '$445.00', 123545, 21, '$14,1000'
                          ]
                     ]"
+                    vertical-align="top"
+                    show-totals-in-footer
+                    hoverable
                 />
             </polaris-card>
 
