Add custom total string

--- a/test/index-datatable.html
+++ b/test/index-datatable.html
@@ -204,8 +204,8 @@
                     :sortable="[true, true, false, false, true]"
                     :rows="rows"
                     vertical-align="top"
-                    show-totals-in-footer
                     hoverable
+                    footer-content="Showing 3 of 3 results"
                     default-sort-direction="descending"
                 />
             </polaris-card>
