Revert links for now.

--- a/test/index-datatable.html
+++ b/test/index-datatable.html
@@ -207,7 +207,8 @@
                     hoverable
                     footer-content="Showing 3 of 3 results"
                     default-sort-direction="descending"
-                />
+                >
+                </polaris-data-table>
             </polaris-card>
 
 
