Fix only sortable when there is a sortable array.
Fiz font size.

--- a/test/index-datatable.html
+++ b/test/index-datatable.html
@@ -95,6 +95,7 @@
         <style>
             body {
                 padding: 0 40px;
+                font-size: 14px;
             }
 
             #app {
@@ -201,7 +202,6 @@
                         'Net Sales'
                     ]"
                     :totals="['', '', '', 255, '$1500']"
-                    :sortable="[true, true, false, false, true]"
                     :rows="rows"
                     vertical-align="top"
                     hoverable
