--- a/test/index-select.html
+++ b/test/index-select.html
@@ -186,6 +186,7 @@
                 Forms
             </div>
 
+            <polaris-icon source="caretDown"></polaris-icon>
 
             <div class="testHeader">&lt;polaris-select&gt;</div>
             <div class="testCase">
