Add full width and animations

--- a/test/index-savebar.html
+++ b/test/index-savebar.html
@@ -188,6 +188,7 @@
             <polaris-contextual-save-bar
                 :save-action="{ onAction: testAlert }"
                 :discard-action="{onAction: testAlert}"
+                full-width
             >
 
             </polaris-contextual-save-bar>
