Updaate resourse list

--- a/test/resource-list-select.html
+++ b/test/resource-list-select.html
@@ -32,6 +32,10 @@
                                 selectable
                                 select-mode
                             >
+                                <template slot="attributeOne">
+                                    {{ item.title }} <br />
+                                    My attr
+                                </template>
                             </polaris-resource-list-item>
                         </template>
                     </polaris-resource-list>
